--- a/templates/base.html
+++ b/templates/base.html
@@ -14,17 +14,19 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     {% comment %}
     <link rel="stylesheet" href=" {% static 'users/css/bootstrap.min.css' %}" />
     {% endcomment %}
 
-    <link rel="stylesheet" href=" {% static 'users/css/style.css' %}  " />
+    {% comment %} <link rel="stylesheet" href=" {% static 'users/css/style.css' %}  " /> {% endcomment %}
 
     <title>Document</title>
   </head>
 
   <body>
-    {% include "users/navbar.html" %}
+    {% include "navbar.html" %}
     <div style="margin-top: 100px; margin-bottom: 100px" class="container">
       {% if messages %} 
         {% for message in messages %} 
