--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="{% url 'home'  %}">
+  <a class="navbar-brand fs-1" href="{% url 'post_list'  %}">
     {% comment %} <img src="{% static 'users/images/cw_logo.jpg' %}" alt="CLARUSWAY_LOGO" /> {% endcomment %}
     h-aln Blog</a>
 
@@ -20,7 +20,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         {% comment %} {% url 'students' %} {% endcomment %}
-        <a class="nav-link" href="">Home</a>
+        <a class="nav-link" href="{% url 'post_list' %}">Home</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="">About</a>
@@ -43,12 +43,12 @@
 
       <li class="nav-item active">
         {% comment %} {% url 'logout' %} {% endcomment %}
-        <a class="nav-link" href="">Profile</a>
+        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
       </li>
 
       <li class="nav-item active">
         {% comment %} {% url 'logout' %} {% endcomment %}
-        <a class="nav-link" href="">New Post</a>
+        <a class="nav-link" href="{% url 'post_create' %}">New Post</a>
       </li>
 
       {% else %}
