--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -1,10 +1,10 @@
-{% extends 'users/base.html' %} 
+{% extends 'base.html' %} 
 
 {% block content %}
 
-<h1>Home Page</h1>
+<h1 class="text-center">h-aln Blog</h1>
 
-{% if request.user.is_authenticated %}
+{% comment %} {% if request.user.is_authenticated %}
 
     <h2>Wellcome {{request.user}}!</h2>
 
@@ -12,6 +12,6 @@
 
     <h2>Wellcome Guest!</h2>
     
-{% endif %} 
+{% endif %}  {% endcomment %}
 
 {% endblock content %}
