--- a/users/templates/users/user_login.html
+++ b/users/templates/users/user_login.html
@@ -1,4 +1,4 @@
-{% extends 'users/base.html' %} 
+{% extends 'base.html' %} 
 
 {% block content %} 
 
@@ -6,12 +6,18 @@
 
 <div class="row">
   <div class="col-md-6 offset-md-3">
-    <h3>Please Login</h3>
+    <h3>Login</h3>
 
     <form action="{% url 'user_login' %}" method="post">
       {% csrf_token %} 
       {{form|crispy}}
-      <button type="submit" class="btn btn-danger">Login</button>
+      <button type="submit" class="btn btn-outline-primary">Login</button>
+      <a class="ml-3" href="">Forgot Password?</a>
+      <div class="mt-4">
+        <span >Need an account?</span>
+        <a class="ml-3" href="{% url 'register' %}">Sign Up Now</a>
+      </div>
+      
     </form>
     
   </div>
