--- a/blog/templates/blog/post_create.html
+++ b/blog/templates/blog/post_create.html
@@ -6,7 +6,7 @@
 
 <h1 class="text-center">Blog Post</h1>
 
-<form action="/post_create/" method="POST" enctype="multipart/form-data">
+<form action="" method="POST" enctype="multipart/form-data">
 
     {% csrf_token %} 
     {{ form | crispy }} 
