--- a/blog/templates/blog/post_create.html
+++ b/blog/templates/blog/post_create.html
@@ -1,19 +1,22 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
-{% block content %}
+ {% load crispy_forms_tags %} 
 
-{% load crispy_forms_tags %}
+ {% block content %}
 
-<h1 class="text-center">Blog Post</h1>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <h3>Blog Post</h3>
+    <hr />
 
-<form action="" method="POST" enctype="multipart/form-data">
-
-    {% csrf_token %} 
-    {{ form | crispy }} 
+    <form method="POST" enctype="multipart/form-data">   
+      {% csrf_token %} 
+      {{form|crispy}}
+      <br />
+      <button type="submit" class="btn btn-outline-info">Post</button>
+    </form>
     
-
-    <button type="submit" class="btn btn-outline-primary">Post</button>
-   
-</form>
+  </div>
+</div>
 
 {% endblock content %}
