--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,25 +1,90 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
+{% block content %}
+
+    <div class="container card" style="width: 40rem;">
+        <img src="{{ object.image.url }}" class="card-img-top" alt="post_image">
+        <div class="card-body">
+            <h2 class="card-title">{{ object.title }}</h2>
+            <hr>
+
+            <div>
+                <span><i class="far fa-comment-alt ml-2"></i></i> {{ object.comment_count }}</span>
+                <span><i class="fas fa-eye ml-2"></i> {{ object.view_count }}</span>
+                <span><i class="far fa-heart ml-2"></i> {{ object.like_count }}</span>
+                <span class="float-right"> <small>Posted {{ object.publish_date|timesince }} ago.</small> </span>
+            </div>
+            <hr>
+
+            <p class="card-text">{{ object.content }}.</p>
+            <hr>
+
+            <div>
+            <h4>Enjoy this post? Give it a LIKE!!</h4>
+            </div>
+
+            <div>
+            <form action="{% url 'blog:like' object.slug %}" method="POST">
+
+                {% csrf_token %}
+                <input type="hidden" name="post">
+                <input type="hidden" name="user">
 
 
-{% block blockcontent %}
+                <button type="submit"><i class="far fa-heart fa-lg"></i></button>
+                {{object.like_count }}
+            </form>
+            <hr>
+            <!-- {% if user.is_authenticated %} -->
+            <h4>Leave a comment below</h4>
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{form|crispy}}
+                <button class="btn btn-secondary btn-sm mt-1 mb-1">SEND</button>
+            </form>
+            <hr>
+            <h4>Comments</h4>
+            {% for comment in object.comments %}
+            <div>
+                <p>
+                    <small><b>Comment by {{comment.user}}</b></small> - <small>{{ comment.time_stamp|timesince }} ago.
+                    </small>
+                </p>
+                <p>
+                    {{ comment.content }}
 
-<div class="card" style="width: 18rem;">
-    <img src="{{ object.image.url }}" class="card-img-top" alt="...">
-    <div class="card-body">
-        <a href="{% url 'blog:detail' object.slug %}" class="text-primary">{{object.title}}
-            <h5 class="card-title"></h5>
-        </a>
-      <p class="card-text">{{object.author}}</p>
-      <p> {{object.content | truncatechars:20}} </p>
-      <div class="icon-group">
-        <i class="fa-regular fa-message"></i>
-        <i class="fa-solid fa-eye"></i>
-        <i class="fa-regular fa-heart"></i>
+                </p>
+            </div>
+            <hr>
+            {% endfor %}
+            <!-- {% else %} -->
+            <!-- <a href="#" class="btn btn-primary btn-block">Login to comment</a> -->
+            <!-- {% endif %} -->
+        
+        </div>
+
+        </div>
+
+        <div class="m-3">
+        {% if user.id == object.author.id %}
+        <a href="{% url 'blog:update' object.slug %}" class="btn btn-info">Edit</a>
+        <a href="{% url 'blog:delete' object.slug %}" class="btn btn-danger">Delete</a>
+        {% endif %}
     </div>
-    <p>Posted 10 months, 2 weeks ago.</p>
-    </div>
-</div>
+    <!-- <div>
+        
+        {% for i in kitap  %}
+        
+        {% if i.user == user %}
+        <h1>{{i.content}}</h1>       
+        {% endif %}
+               
+        {% endfor %}
+     
+    </div> -->
+    <!-- <div>
+        <h3>{{like_qs}}</h3>
+    </div> -->
 
-    
 {% endblock content %}
-    
