--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,33 +1,33 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
+
 
 {% block content %}
+<h1 style="text-align: center;">h-aln Blog</h1>
+<div class="row mt-5" >
+    {% for obj in object_list %}
+    <div class="col-4">
 
-{% load crispy_forms_tags %}
+        <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; height: 25rem; ">
+            <img src="{{ obj.image.url }}" class="card-img-top" alt="post_image" style="width:15rem; height: 11rem; align-self:center;">
+            <hr>
+            <div class="card-body">
+                <h5 class="card-title"><a href="{% url 'blog:detail' obj.slug %}">{{obj.title}}</a></h5>
+                <p class="card-text">{{obj.content|truncatechars:20}}</p>
+                
+                <p>
+                    <span><i class="far fa-comment-alt ml-2"></i>{{ obj.comment_count }}</span>
+                    <span><i class="fas fa-eye ml-2"></i>{{ obj.view_count }}</span>
+                    <span><i class="far fa-heart ml-2"></i>{{ obj.like_count }}</span>
+                <p class="card-text"><small>
+                        Posted {{ obj.publish_date|timesince }} ago.
+                    </small>
+                </p>
 
-<h1 class="text-center">h-aln Blog</h1>
+                </p>
+            </div>
+        </div>
+    </div>
 
-{% for object in object_lists %}
-
-  <div class="card" style="width: 18rem;">
-      <img src="{{ object.image.url }}" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><a href="#" class="text-primary">{{object.title}}</a></h5>
-        <p class="card-text">{{object.author}}</p>
-        <p> {{object.content | truncatechars:20}} </p>
-        <div class="icon-group">
-          <i class="fa-regular fa-message"></i>
-          <i class="fa-solid fa-eye"></i>
-          <i class="fa-regular fa-heart"></i>
-      </div>
-      <p>Posted 10 months, 2 weeks ago.</p>
-      </div>
-  </div>
-
-{% endfor %}
-
-
-
+    {% endfor %}
 </div>
-
-
 {% endblock content %}
