--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{% static 'blog/main.css' %}">
-    
+
     <title>Blog Project</title>
   </head>
   <body>
@@ -28,7 +28,8 @@
         {% endfor %}
         {% endif %}
 
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% endblock %}
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
