--- a/blog/templates/blog/post_delete.html
+++ b/blog/templates/blog/post_delete.html
@@ -1,8 +1,4 @@
-% extends 'base.html' %} 
-
-{% load static %} 
-
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 
 <div class="row mt-5">
   <div class="col-md-6">
@@ -17,5 +13,4 @@
     </div>
   </div>
 </div>
-
-{% endblock content %}
+{% endblock %}
