--- a/blog/templates/blog/post_update.html
+++ b/blog/templates/blog/post_update.html
@@ -1,16 +1,10 @@
-{% extends 'base.html' %} 
-
-{% load crispy_forms_tags %} 
-
-{% block content %}
-
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
 <div class="row">
   <div class="col-md-6 offset-md-3">
     <h3>Update Post</h3>
     <hr />
     <form method="POST" enctype="multipart/form-data">
-      {% csrf_token %} 
-      {{form|crispy}}
+      {% csrf_token %} {{form|crispy}}
       <br />
       <button type="submit" class="btn btn-outline-info">Update</button>
     </form>
@@ -19,4 +13,5 @@
 
 {% endblock content %}
 
+    
     
