--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,13 +13,18 @@
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
+
                   {% if user.is_authenticated %}
+
                   <a class="nav-item nav-link" href="#">Logout</a>
-                  <a class="nav-item nav-link" href="#">Profile</a>
+                  <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                   <a class="nav-item nav-link" href="{% url 'blog:create' %}">New Post</a>
+
                   {% else %}
-                  <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                  <a class="nav-item nav-link" href="#">Register</a>
+
+                  <a class="nav-item nav-link" href="{% url 'user_login' %}">Login</a>
+                  <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+
                   {% endif %}
               </div>
           </div>
