--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,31 +1,22 @@
-{% extends 'base.html' %} 
-
-{% block content %} 
-
+{% extends 'base.html' %} {% block title %}Register{% endblock %}
 {% load crispy_forms_tags %}
-
-<h2>Join Today</h2>
-
-{% if request.user.is_authenticated %}
-
-    <h3>Thanks for registering</h3>
-
-{% else %}
-
-
-    <form action="" method="post" enctype="multipart/form-data">
-
-        {% csrf_token %} 
-        {{ form_user | crispy }} 
-        {{ form_profile | crispy }}
-
-        <button type="submit" class="btn btn-outline-primary">Register</button>
-        <div class="mt-4">
-            <span >Already have an account?</span>
-            <a class="ml-3" href="{% url 'register' %}">Sign In</a>
+{% block content %}
+<div class="content-section">
+    <form action="" method="post">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Join Today</legend>
+            {{ form|crispy }}
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Sign Up</button>
         </div>
     </form>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            Already have an account?<a class="ml-2" href="{% url 'login'  %}">Sign In</a>
+        </small>
+    </div>
 
-{% endif %} 
-
-{% endblock content %}
+</div>
+{% endblock %}
